# fx-82ZX

./: .travis.yml  1503_02.bak  calculator-cache.lib  calculator.bak  calculator.kicad_pcb  calculator.net  calculator.pro  calculator.sch  chipselect.sch  conn24.lib  connflat.mod  ds80c320.bak  ds80c320.lib  key.mod  keypad.xcf  keys.sch  ly62l205016a.lib  memory.bak  microsd.mod  oled.bak  oled.sch  opl3.sch  sn74f1056.lib
kicad/: 1503_02.lib  atwinc1500.lib  calculator-cache.lib  calculator.bak  calculator.cmp  calculator.kicad_pcb  calculator.kicad_pcb-bak  dsmall.lib  ez80f91.lib  keys.bak  ly62l205016a.bak  memory.bak  nhd-2.bak  nhd-2.lib  oled.sch  ymf289b-s.bak  ymf289b-s.lib
system/: CMakeLists.txt  kernel.h  kprintf.c  main.c  stddef.h
system/lib/: 8051.h  sdcc.h
